--- a/src/CSS/General.css
+++ b/src/CSS/General.css
@@ -56,6 +56,52 @@
     color: #6A3E96;
 }
 
+/* HEADER MOBILE */
+.burger-menu {
+    width: 35px;
+    margin: 10px;
+}
+
+.close-burger-menu {
+    width: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.sidebar {
+    width: 200px;
+    padding-top: 20px;
+    background-color: #FFF;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    transition: right 0.3s ease-in-out;
+    z-index: 1000;
+}
+
+.sidebar-open {
+    right: 0;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.sidebar ul li {
+    margin-bottom: 15px;
+    color: #8C5CBC;
+}
+
+.sidebar ul li:hover {
+    text-decoration: underline;
+    color: #6A3E96;
+}
+
 /* BUTTONS */
 
 .white-button {
@@ -173,4 +219,74 @@
     border: 1px solid #6A3E96;
     border-radius: 10px;
     padding: 10px;
+}
+
+/* RESPONSIVE */
+
+@media (min-width: 992px) and (max-width: 1199.98px) {}
+
+@media (min-width: 768px) and (max-width: 991.98px) {}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    /* .footer-logo {
+        max-height: 180px;
+    } */
+
+    /* .footer-left span {
+        font-size: 12px;
+        margin-left: 10%;
+    } */
+
+    .footer-right-mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-input-button {
+        flex-direction: row;
+        column-gap: 10px;
+    }
+}
+
+@media (max-width: 575.98px) {
+
+    .banner-title {
+        font-size: 20px;
+        width: 80%;
+    }
+
+    .schema-une-heure {
+        width: 100%;
+    }
+
+    /* FOOTER */
+
+    .footer-logo {
+        max-height: 180px;
+    }
+
+    .footer-left span {
+        font-size: 12px;
+        margin-left: 10%;
+    }
+
+    .footer-right-mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-input-button {
+        flex-direction: row;
+        column-gap: 10px;
+    }
+
+    .footer-input-button input {
+        width: 100%;
+    }
+
+    .footer-icons {
+        column-gap: 10px;
+    }
 }
