Feat equipe page

--- a/src/CSS/Homepage.css
+++ b/src/CSS/Homepage.css
@@ -1,6 +1,6 @@
 /* HERO HOMEPAGE */
 
-.hero-bg {
+.hero-bg-homepage {
     background-image: url(../assets/homepage-hero.png);
     background-position: center;
     background-repeat: no-repeat;
