--- a/src/CSS/General.css
+++ b/src/CSS/General.css
@@ -10,6 +10,10 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.font-italic {
+    font-style: italic;
+}
+
 /* HEADER */
 
 .navbar-bg {
