--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -5,40 +5,18 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 775px;
+    height: 100%;
     position: relative;
 }
 
-.valeurs {
-    color: #FFF;
-    font-size: 35px;
-    margin-top: 18%;
-}
-
-.trois-blocs-login {
-    column-gap: 50px;
-}
-
 .trois-blocs-login div {
-    border-radius: 10px;
-    background: #8C5CBC;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.40);
-    color: #FFF;
-    height: 335px;
-    width: 250px;
-    margin-top: 3%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 50px;
-    row-gap: 10px;
+    height: 200px;
 }
 
 /* FORM */
 
 .rejoindre-container {
-    margin-top: 200px;
+    /* margin-top: 200px; */
     column-gap: 40px;
 }
 
@@ -81,6 +59,10 @@
     width: calc(100% - 1.5rem);
 }
 
+.submit-candidature {
+    width: fit-content !important;
+}
+
 /* LOGIN */
 
 .login-container {
@@ -100,6 +82,7 @@
 
 .login-container input {
     width: 250px;
+    color: #000 !important;
 }
 
 .form-group.floating .login-label,
@@ -127,6 +110,16 @@
 
     .info-container {
         width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .candidature-container form {
+        row-gap: 20px;
+        margin-bottom: 0;
+    }
+
+    .login-container h4 {
+        text-align: center;
     }
 }
 
@@ -144,5 +137,19 @@
 
     .info-container {
         width: 100%;
+    }
+
+    .info-container {
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .candidature-container form {
+        row-gap: 20px;
+        margin-bottom: 0;
+    }
+
+    .login-container h4 {
+        text-align: center;
     }
 }
