--- a/src/CSS/Mission.css
+++ b/src/CSS/Mission.css
@@ -5,30 +5,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 700px;
+    height: 100%;
     position: relative;
 }
 
-.gares-pour-detente {
-    color: #FFF;
-    font-size: 35px;
-    margin-top: 15%;
-}
-
 .trois-blocs-mission div {
-    border-radius: 10px;
-    background: #8C5CBC;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.40);
-    color: #FFF;
     height: 200px;
-    width: 250px;
-    margin-top: 3%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 50px;
-    row-gap: 10px;
 }
 
 /* STEPS */
@@ -86,4 +68,40 @@
     width: 300px;
     height: 275px;
     object-fit: cover;
+}
+
+/* RESPONSIVE */
+
+@media (min-width: 992px) and (max-width: 1199.98px) {}
+
+@media (min-width: 768px) and (max-width: 991.98px) {}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .questions-container {
+        width: 100%;
+    }
+
+    .gallery-container h4 {
+        text-align: center;
+    }
+
+    .gallery-images {
+        flex-direction: column;
+        row-gap: 20px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .questions-container {
+        width: 100%;
+    }
+
+    .gallery-container h4 {
+        text-align: center;
+    }
+
+    .gallery-images {
+        flex-direction: column;
+        row-gap: 20px;
+    }
 }
