--- a/src/CSS/Concept.css
+++ b/src/CSS/Concept.css
@@ -67,6 +67,10 @@
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .offre-container {
+        margin-top: 50px;
+    }
+
     .chaise-photo {
         margin: auto;
         padding-top: 50px;
@@ -78,6 +82,10 @@
 }
 
 @media (max-width: 575.98px) {
+    .offre-container {
+        margin-top: 50px;
+    }
+
     .chaise-photo {
         max-height: 350px;
         padding-top: 50px;
