--- a/src/CSS/General.css
+++ b/src/CSS/General.css
@@ -158,6 +158,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.40);
     color: #FFF;
     width: 250px;
+    margin-bottom: -6%;
 }
 
 /* BUTTONS */
@@ -322,6 +323,10 @@
         align-items: center;
     }
 
+    .trois-blocs div {
+        margin-bottom: 15px;
+    }
+
     .third-bloc {
         margin-bottom: 10px;
     }
@@ -348,6 +353,10 @@
     .trois-blocs {
         flex-direction: column;
         align-items: center;
+    }
+
+    .trois-blocs div {
+        margin-bottom: 15px;
     }
 
     .third-bloc {
