--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -10,13 +10,13 @@
 }
 
 .trois-blocs-login div {
-    height: 200px;
+    /* height: 200px; */
 }
 
 /* FORM */
 
 .rejoindre-container {
-    /* margin-top: 200px; */
+    margin-top: 100px;
     column-gap: 40px;
 }
 
@@ -102,6 +102,7 @@
 
     .rejoindre-container {
         flex-direction: column;
+        margin-top: 0px;
     }
 
     .candidature-container {
@@ -129,6 +130,7 @@
 
     .rejoindre-container {
         flex-direction: column;
+        margin-top: 0px;
     }
 
     .candidature-container {
