--- a/src/CSS/Mission.css
+++ b/src/CSS/Mission.css
@@ -1,7 +1,7 @@
 /* HERO */
 
 .hero-bg-mission {
-    background-image: url(../assets/mission-hero.png);
+    background-image: url(../assets/equipe-hero.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,13 +10,18 @@
 }
 
 .trois-blocs-mission div {
-    height: 200px;
+    /* height: 200px; */
 }
 
 /* STEPS */
 
-.steps-mission {
-    margin-top: 12%;
+.blocs-photo {
+    max-height: 420px;
+    margin-right: 10%;
+}
+
+.steps-container {
+    margin-bottom: 50px;
 }
 
 /* FAQ */
@@ -74,9 +79,26 @@
 
 @media (min-width: 992px) and (max-width: 1199.98px) {}
 
-@media (min-width: 768px) and (max-width: 991.98px) {}
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .bloc-photo {
+        padding-top: 50px;
+    }
+
+    .questions-container {
+        width: 80%;
+    }
+
+    .gallery-container img {
+        width: 230px;
+    }
+}
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .bloc-photo {
+        margin: auto;
+        padding-top: 50px;
+    }
+
     .questions-container {
         width: 100%;
     }
@@ -92,6 +114,12 @@
 }
 
 @media (max-width: 575.98px) {
+    .bloc-photo {
+        max-height: 350px;
+        padding-top: 50px;
+        margin: auto;
+    }
+
     .questions-container {
         width: 100%;
     }
