Test MUI tables

--- a/src/CSS/Equipe.css
+++ b/src/CSS/Equipe.css
@@ -1,7 +1,7 @@
 /* HERO */
 
 .hero-bg-equipe {
-    background-image: url(../assets/equipe-hero.png);
+    background-image: url(../assets/equipe-hero.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
