--- a/src/CSS/Equipe.css
+++ b/src/CSS/Equipe.css
@@ -120,6 +120,10 @@
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .hero-bg-equipe {
+        background-image: url(../assets/equipe-mobile-hero.jpg);
+    }
+
     .core-team {
         display: flex;
         flex-wrap: wrap;
@@ -155,6 +159,9 @@
 }
 
 @media (max-width: 575.98px) {
+    .hero-bg-equipe {
+        background-image: url(../assets/equipe-mobile-hero.jpg);
+    }
 
     .core-team {
         flex-direction: column;
