--- a/src/CSS/Homepage.css
+++ b/src/CSS/Homepage.css
@@ -9,10 +9,6 @@
     position: relative;
 }
 
-.trois-blocs-homepage {
-    /* height: 1000px; */
-}
-
 /* BIENFAITS */
 
 .bienfaits-container {
@@ -29,7 +25,6 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    margin-left: 10%;
 }
 
 .bullets-bienfaits {
@@ -73,8 +68,6 @@
 
 /* RESPONSIVE */
 
-@media (min-width: 992px) and (max-width: 1199.98px) {}
-
 @media (min-width: 768px) and (max-width: 991.98px) {
     /* BIENFAITS */
 
@@ -109,6 +102,10 @@
 
     /* CLIENTS */
 
+    .clients-container{
+        padding: 0px 25px;
+    }
+
     .clients-slider img {
         max-width: 125px;
         max-height: 75px;
@@ -117,6 +114,10 @@
 
 @media (min-width: 576px) and (max-width: 767.98px) {
     
+    .hero-bg-homepage {
+        background-image: url(../assets/homepage-mobile-hero.png);
+    }
+
     /* BIENFAITS */
 
     .bienfaits-container {
@@ -154,6 +155,10 @@
 
     /* CLIENTS */
 
+    .clients-container{
+        padding: 0px 25px;
+    }
+
     .clients-title {
         margin-top: 50px;
         margin-bottom: 25px;
@@ -165,13 +170,17 @@
     }
 
     .clients-slider img {
-        max-width: 100px;
+        max-width: 80px;
         max-height: 50px;
         margin-bottom: 50px;
     }
 }
 
 @media (max-width: 575.98px) {
+    .hero-bg-homepage {
+        background-image: url(../assets/homepage-mobile-hero.png);
+    }
+
     /* BIENFAITS */
 
     .bienfaits-container {
@@ -223,10 +232,11 @@
 
     .clients-slider {
         column-gap: 5px;
+        padding: 0px 25px;
     }
 
     .clients-slider img {
-        max-width: 75px;
+        max-width: 55px;
         max-height: 35px;
         margin-bottom: 50px;
     }
