--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -9,10 +9,6 @@
     position: relative;
 }
 
-.trois-blocs-login div {
-    /* height: 200px; */
-}
-
 /* FORM */
 
 .rejoindre-container {
@@ -112,6 +108,9 @@
 @media (min-width: 768px) and (max-width: 991.98px) {}
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .hero-bg-login {
+        background-image: url(../assets/login-mobile-hero.png);
+    }
 
     /* FORM */
 
@@ -140,6 +139,9 @@
 }
 
 @media (max-width: 575.98px) {
+    .hero-bg-login {
+        background-image: url(../assets/login-mobile-hero.png);
+    }
 
     /* FORM */
 
