--- a/src/CSS/Dashboard.css
+++ b/src/CSS/Dashboard.css
@@ -60,8 +60,8 @@
 
 /* NAVBAR DASH */
 
-.nav-dropdown-dash, 
-.btn.show, 
+.nav-dropdown-dash,
+.btn.show,
 .btn:first-child:active {
     margin: 25px 0;
     color: #8C5CBC;
@@ -70,7 +70,7 @@
     border-color: #8C5CBC;
 }
 
-.nav-dropdown-dash:focus, 
+.nav-dropdown-dash:focus,
 .btn.show:focus {
     margin: 25px 0;
     color: #6A3E96;
@@ -135,10 +135,14 @@
     transform: scale(1.1);
 }
 
-.drop-mission-member{
+.drop-mission-member {
     width: 12px;
     margin-right: 5px;
 }
+
+/* .newsletter-table {
+    width: 470px;
+} */
 
 /* MODAL */
 
@@ -221,6 +225,10 @@
         text-align: left !important;
 
     }
+
+    /* .newsletter-table {
+        width: 350px;
+    } */
 }
 
 @media (max-width: 575.98px) {
@@ -232,4 +240,8 @@
     .no-result-message {
         text-align: left !important;
     }
+
+    /* .newsletter-table {
+        width: 330px;
+    } */
 }
