--- a/src/CSS/General.css
+++ b/src/CSS/General.css
@@ -299,8 +299,14 @@
 
 .footer-input-button input {
     border: 1px solid #6A3E96;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 10px;
+}
+
+.footer-input-button input::placeholder {
+    font-style: italic;
+    font-size: smaller;
+    color: rgb(172, 169, 169);
 }
 
 .footer-input-button input:focus {
@@ -364,7 +370,6 @@
 }
 
 @media (max-width: 575.98px) {
-
     /* HERO SECTION */
 
     .hero-title {
