--- a/src/CSS/Mission.css
+++ b/src/CSS/Mission.css
@@ -9,10 +9,6 @@
     position: relative;
 }
 
-.trois-blocs-mission div {
-    /* height: 200px; */
-}
-
 /* STEPS */
 
 .blocs-photo {
@@ -99,6 +95,10 @@
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .hero-bg-mission {
+        background-image: url(../assets/mission-mobile-hero.png);
+    }
+
     .bloc-photo {
         margin: auto;
         padding-top: 50px;
@@ -119,6 +119,10 @@
 }
 
 @media (max-width: 575.98px) {
+    .hero-bg-mission {
+        background-image: url(../assets/mission-mobile-hero.png);
+    }
+
     .bloc-photo {
         max-height: 350px;
         padding-top: 50px;
