--- a/src/CSS/Concept.css
+++ b/src/CSS/Concept.css
@@ -75,6 +75,10 @@
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .hero-bg-concept {
+        background-image: url(../assets/concept-mobile-hero.png);
+    }
+
     .offre-container {
         margin-top: 50px;
     }
@@ -103,6 +107,10 @@
 }
 
 @media (max-width: 575.98px) {
+    .hero-bg-concept {
+        background-image: url(../assets/concept-mobile-hero.png);
+    }
+
     .offre-container {
         margin-top: 50px;
     }
